fix: x-overflow

--- a/src/style.css
+++ b/src/style.css
@@ -217,9 +217,10 @@ footer {
   top: 3.97rem;
   padding-top: 0;
   margin-top: 0;
-  min-width: 15.5rem;
+  min-width: 15.8rem;
   height: 95vh;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .filter-close-btn {
